cmake_minimum_required(VERSION 3.31)
project(hw2025_04 C)

set(CMAKE_C_STANDARD 11)

add_executable(hw2025_04 main.c
        Features/p_01.c
        Features/p_02.c
        Features/p_03.c
        Features/p_04.c
        Features/p_05.c
        Features/p_06.c
        Features/p_07.c
        Features/p_08.c
        Features/p_09.c
        Features/p_10.c
        Features/p_11.c
        Features/p_12.c
        Features/p_13.c
        Features/p_14.c
        Features/p_19.c
        Features/p_20.c
        Features/p_15.c
        Features/p_16.c
        Features/p_17.c
        Features/p_18.c
        Features/p_21.c
        Features/p_22.c
        Features/p_23.c
        Features/p_24.c
        Features/p_25.c
        Features/p_26.c
        Features/p_27.c)
